syntax = "proto3";

package lesson.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/eslsoft/lession/pkg/api/lesson/v1;lessonv1";

message Lesson {
  string id = 1;
  string title = 2;
  optional string description = 3;
  optional string teacher = 4;
  int32 duration_minutes = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateLessonRequest {
  string title = 1;
  optional string description = 2;
  optional string teacher = 3;
  int32 duration_minutes = 4;
}

message CreateLessonResponse {
  Lesson lesson = 1;
}

message GetLessonRequest {
  string id = 1;
}

message GetLessonResponse {
  Lesson lesson = 1;
}

message ListLessonsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListLessonsResponse {
  repeated Lesson lessons = 1;
  string next_page_token = 2;
}

message UpdateLessonRequest {
  string id = 1;
  string title = 2;
  optional string description = 3;
  optional string teacher = 4;
  int32 duration_minutes = 5;
}

message UpdateLessonResponse {
  Lesson lesson = 1;
}

message DeleteLessonRequest {
  string id = 1;
}

message DeleteLessonResponse {}

service LessonService {
  rpc CreateLesson(CreateLessonRequest) returns (CreateLessonResponse);
  rpc GetLesson(GetLessonRequest) returns (GetLessonResponse);
  rpc ListLessons(ListLessonsRequest) returns (ListLessonsResponse);
  rpc UpdateLesson(UpdateLessonRequest) returns (UpdateLessonResponse);
  rpc DeleteLesson(DeleteLessonRequest) returns (DeleteLessonResponse);
}
